moved styles inline and fixed JS layout issues

--- a/storefront-START/src/css/styles.css
+++ b/storefront-START/src/css/styles.css
@@ -52,57 +52,3 @@ main{
 
 
 /* YOUR STYLE START HERE */
-body {
-  padding: 1rem;
-}
-
-.store-item {
-  text-align: center;
-  box-shadow: 0 0 0.5rem rgba(0,0,0,0.5);
-  border-radius: 1rem;
-  padding: 1rem;
-  max-width: 40rem;
-  margin: 1rem auto;
-}
-
-.store-item h4 {
-  font-weight: bold;
-  font-size: 1.5rem;
-}
-
-.store-item p {
-  font-style: italic;
-  font-size: 1.3rem;
-}
-
-@media screen and (min-width: 576px){
-  .flex-container {
-    display: flex;
-    flex-flow: row wrap;
-    gap: 1rem;
-    max-width: 85vw;
-    margin: 0 auto;
-  }
-  
-  .store-item {
-    width: calc(50% - 1rem);
-    max-width: initial;
-    margin: 0;
-  }
-}
-
-@media screen and (min-width: 776px) {
-  .store-item {
-    width: calc(33% - 1rem);
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .flex-container {
-    max-width: 1400px;
-  }
-  
-  .store-item {
-    width: calc(25% - 1rem);
-  }
-}
